ingress/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    cert-manager.io/cluster-issuer: lets-prod
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: 35.239.147.54.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beerlog
            port:
              number: 8000
